--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -89,6 +89,10 @@
         margin-top: -($indent-var);
       }
     }
+     
+    a {
+       overflow-wrap: break-word;
+     }
   }
 
   a:not(.btn) {
