--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: archive
 
 {{ content }}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
+<h1 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "My Recent Posts" }}</h1>
 
 {% for post in paginator.posts %}
   {% include archive-single.html %}
