--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -14,7 +14,7 @@ layout: default
   {% endunless %}
 {% endif %}
 
-<div id="main" role="main">
+<div id="main" class="wide" role="main">
   {% include sidebar.html %}
 
   <div class="archive">
