--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -35,7 +35,7 @@
 >
   {% if page.header.show_overlay_title != false and {page.header.overlay_color or page.header.overlay_image} %}
     <div class="wrapper">
-      <h1 id="page-title" class="page__title" itemprop="headline">
+      <h1 id="page-title" class="page__title {% if page.header.hide_h1 == true %}masked-h1{% endif %}" itemprop="headline">
         {% if paginator and site.paginate_show_page_num %}
           {{ site.title }}{% unless paginator.page == 1 %} {{ site.data.ui-text[site.locale].page | default: "Page" }} {{ paginator.page }}{% endunless %}
         {% else %}
