--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,8 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="shortcut icon" hype="image/png" href="/assets/images/favicon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/assets/images/android-icon-192x192.png">
 <!--[if IE ]>
   <style>
     /* old IE unsupported flexbox fixes */
